# my-ai-workflow-for-instagram-content-generation

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
.github/: actions.env
.github/workflows/: post-reels.yml
.github/workflows-paused/: post-reels.yml
config/: topics.json
scripts/: mock_image_generator.sh  mock_image_to_video.sh  mock_video_generator.sh  run_daily.sh  run_render_once.sh
src/shortgen/: cli.py  cloudinary.py  config.py  instagram.py  media.py  models.py  pipeline.py  planner.py
src/shortgen/providers/: base.py  command_image_to_video_provider.py  command_provider.py  google_script_provider.py  google_trends_topic_provider.py  json2video_provider.py  nvidia_tts_provider.py
